@@ -10,8 +10,6 @@
 #undef DTORS_SECTION_ASM_OP
 #undef INIT_SECTION_ASM_OP
 #undef READONLY_DATA_SECTION
-#undef ASM_OUTPUT_CONSTRUCTOR
-#undef ASM_OUTPUT_DESTRUCTOR
 #undef TARGET_ASM_NAMED_SECTION
 #undef TARGET_MEM_FUNCTIONS
 #undef PREFERRED_DEBUGGING_TYPE
