@@ -603,7 +603,12 @@ typedef union tree_node *tree;
 	VALID_MACHINE_DECL_ATTRIBUTE VALID_MACHINE_TYPE_ATTRIBUTE	\
 	SET_DEFAULT_TYPE_ATTRIBUTES SET_DEFAULT_DECL_ATTRIBUTES		\
 	MERGE_MACHINE_TYPE_ATTRIBUTES MERGE_MACHINE_DECL_ATTRIBUTES	\
-	MD_INIT_BUILTINS MD_EXPAND_BUILTIN
+	MD_INIT_BUILTINS MD_EXPAND_BUILTIN ASM_OUTPUT_CONSTRUCTOR	\
+	ASM_OUTPUT_DESTRUCTOR
+
+/* And other obsolete target macros.  */
+ #pragma GCC poison INT_ASM_OP
+
 #endif /* IN_GCC */
 
 /* Note: not all uses of the `index' token (e.g. variable names and
